<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/backz"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_arrow"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/settings"
        android:textColor="@color/app_theme"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/settings_text"
        android:layout_marginTop="16dp"
        android:background="@color/app_theme" />

    <TextView
        android:id="@+id/theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/theme"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/backup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/theme_text"
        android:layout_margin="16dp"
        android:text="@string/backup"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/backup_text"
        android:layout_marginTop="16dp"
        android:background="@color/app_theme" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/notifications"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/data_usage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/data_usage"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/storage_usage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_usage_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/storage_usage"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/storage_usage_text"
        android:layout_marginTop="16dp"
        android:background="@color/app_theme" />

    <TextView
        android:id="@+id/account_settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/account_settings"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>