<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".EdtProfile">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/backaz"
        android:src="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/back_arrow"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="145dp"
        android:layout_toEndOf="@+id/back_arrow"
        android:contentDescription="@string/profpic"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_person_24" />

    <TextView
        android:id="@+id/edit_profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/edit_profile"
        android:textColor="@color/app_theme"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <!-- Full Name -->
    <TextView
        android:id="@+id/full_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_profile_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/full_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/full_name_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:paddingStart="15sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name_edittext"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/emailaddress"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/change_email_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/email_label"
        android:layout_alignParentEnd="true"
        android:textColor="@color/app_theme"
        android:layout_marginEnd="40dp"
        android:text="@string/change_email"/>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="xyz@gmail.com"
        android:padding="10sp"
        android:paddingStart="15sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/telephone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/z"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/telephone_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/telephone_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="+254"
        android:padding="10sp"
        android:paddingStart="15sp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/telephone_edittext"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/app_theme"
        android:layout_centerHorizontal="true"
        android:text="@string/save_changes"/>

</RelativeLayout>