<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Theme">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/backz"
        android:src="@drawable/baseline_arrow_back_24" />

    <RadioButton
        android:id="@+id/btn_light"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_arrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="160dp"
        android:text="@string/light_mode" />

    <RadioButton
        android:id="@+id/btn_dark"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_light"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:text="@string/dark_mode" />

</RelativeLayout>
