<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Notifications"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/app_theme"
    android:padding="20sp">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:backgroundTint="#C8C3C3"
        android:layout_marginTop="50sp"
        android:background="@drawable/button_bg">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/backz"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/txt_tkt"
            android:layout_width="wrap_content"
            android:layout_height="116dp"
            android:layout_below="@+id/back_arrow"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_toEndOf="@+id/back_arrow"
            android:backgroundTint="@color/white"
            android:padding="10sp"
            android:text="@string/your_ticket_number_is"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_branch"
            android:layout_width="301dp"
            android:backgroundTint="@color/white"
            android:layout_height="70dp"
            android:layout_below="@+id/txt_tkt"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="57dp"
            android:gravity="center_vertical"
            android:text="@string/branch"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_service"
            android:layout_width="304dp"
            android:layout_height="59dp"
            android:layout_below="@id/txt_branch"
            android:backgroundTint="@color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:padding="10sp"
            android:gravity="center_vertical"
            android:text="@string/service"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_time"
            android:layout_width="304dp"
            android:backgroundTint="@color/white"
            android:layout_height="59dp"
            android:layout_below="@id/txt_service"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp"
            android:padding="10sp"
            android:gravity="center_vertical"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="301dp"
            android:layout_height="288dp"
            android:layout_below="@+id/textview_time"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="51dp"
            android:contentDescription="@string/qr"
            app:srcCompat="@drawable/baseline_qr_code_scanner_24" />

    </RelativeLayout>
</LinearLayout>