<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    android:background="@color/app_theme"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    tools:context=".Login">


    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:padding="15sp"
        android:text="@string/log_into_your_account"
        android:textColor="@color/card_theme"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:layout_below="@+id/login_tv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/login_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/log_email"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:padding="15sp"
                android:background="@drawable/edt_texts"
                android:textColorHint="@color/black"
                android:layout_marginTop="64dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_address_or_username"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/log_pass"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:background="@drawable/edt_texts"
                android:layout_below="@+id/log_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15sp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_email" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/card_theme"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_pass"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_google"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/continue_with_google"
                android:textAllCaps="false"
                android:textColor="@color/card_theme"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="251dp"
                    android:layout_height="40dp"
                    android:gravity="right"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/new_acc_tv"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:gravity="left"
                    android:text="@string/sign_up"
                    android:textColor="@color/app_theme"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>


